--- a/templates/blog/_entry.twig
+++ b/templates/blog/_entry.twig
@@ -1,39 +1,107 @@
 {% extends "_layout.twig" %}
-{% set entries = craft.entries().section('blog') %}
-{% set featureImage = entry.blogImage.one() %}
+{% set currentEntry = entry %}
 
+{% if currentEntry.id != null %}
+    {% set firstEntry = craft.entries()
+        .section('blog')
+        .orderBy('postDate asc')
+        .one()
+    %}
+    
+    {% set previousEntries = craft.entries()
+        .section('blog')
+        .id('not ' ~ currentEntry.id)
+        .limit(3)
+        .orderBy('postDate desc')
+        .all()
+    %}
+    
+    {% if currentEntry.id != firstEntry.id %}
+        {% set entries = [firstEntry] | merge(previousEntries) %}
+    {% else %}
+        {% set entries = previousEntries %}
+    {% endif %}
+{% endif %}
+
+{% set featureImage = currentEntry.blogImage.one() %}
+{% set authorProfileImage = entry.authorProfile.one() %}
 
 {% block content %}
 <div class="blog-content dark">
-  <div class="container-fluid hero-header" >
+   <div class="container-fluid hero-header" >
       <div class="wrapper">
-          <div class="d-flex flex-column">
-          <div class="">
-          <p class="pre-header">About Us</p>
-              <h1 class="">{{entry.title}}</h1>
-          </div>
-          </div>
-      </div>
-  </div>
-  <div class="single-svg">
-      {% include '_partials/svg/lg-round-grey.svg' %}
-  </div>
-
-  <div class="container-fluid style-4 small-image-wrapper" >
-    <div class="wrapper">
-        <div class="d-lg-flex small-image">
-        <div class="left-size">
-            <div class="bg-img" style="background-image: url('{{ featureImage.getUrl() }}">
+         <div class="d-flex flex-column">
+            <div class="">
+               {% if currentEntry.title %}
+               <h1 class="">{{ currentEntry.title }}</h1>
+               {% endif %}  
+               <div class="right-size">
+                  <div class="test-author">
+                     <div class="img-auth">
+                        {% if authorProfileImage %}
+                            <img src="{{ authorProfileImage.getUrl() }}" alt="Customer profile image">
+                        {% endif %} 
+                     </div>
+                     <div class="text-auth">
+                        {% if currentEntry.authorName %}
+                        <p><span> {{ currentEntry.authorName }}</span></p>
+                        {% endif %}  
+                        {% if currentEntry.publishDate %}
+                        <p>{{ currentEntry.publishDate|date('d-m-Y') }}</p>
+                        {% endif %}  
+                     </div>
+                  </div>
+               </div>
             </div>
-        </div>
-        <div class="right-size">
-        <p class="intro-text ">
-            {{entry.blogIntro}}
-        </p>
-        </div>
-        </div>
-    </div>
-  </div>
+         </div>
+      </div>
+   </div>
 
+   <div class="single-svg">
+      {% include '_partials/svg/lg-round-grey.svg' %}
+   </div>
+
+   <div class="container-fluid style-4 small-image-wrapper" >
+      <div class="wrapper">
+         <div class="d-lg-flex small-image">
+            <div class="left-size">
+               {% if featureImage %}
+               <div class="bg-img" style="background-image: url('{{ featureImage.getUrl() }}')">
+               </div>
+               {% endif %}
+            </div>
+            <div class="right-size">
+               <p class="intro-text ">
+                  {% if currentEntry.blogIntro %}
+                  {{ currentEntry.blogIntro }}
+                  {% endif %}
+               </p>
+            </div>
+         </div>
+      </div>
+   </div>
 </div>
-  {% endblock %}
+
+<div class="blog-wrapper">
+   <div class="blog-nav">
+      <p class="pre-header">Read Next</p>
+      <ul>
+         {% for otherEntry in entries %}
+            <li>
+                <a href="{{ otherEntry.url }}">{{ otherEntry.title }}</a>
+            {% if otherEntry.publishDate %}
+                <p>{{ otherEntry.publishDate|date('d-m-Y') }}</p>
+            {% endif %}  
+            </li>
+         {% endfor %}
+      </ul>
+   </div>
+
+   <div class="blog-body">
+      {% if currentEntry.blogContent %}
+         {{ currentEntry.blogContent }}
+      {% endif %}
+   </div>
+</div>
+
+{% endblock %}
