--- a/web/assets/scss/style.scss
+++ b/web/assets/scss/style.scss
@@ -651,6 +651,34 @@ nav{
     }
   }
 }
+//testimonial and blog
+.test-author{
+  display: flex;
+  margin-top:30px;
+  @media (min-width:992px) {
+    margin-top:60px;
+  }
+  .img-auth{
+    margin-right:24px;
+    background-color: red;
+    width: 50px;
+    height: 50px;
+    border-radius: 100%;
+    overflow: hidden;
+    img{width: 100%;}
+
+  }
+  .text-auth{
+    p{
+      color:$medium-grey;
+    }
+    p span{
+      font-size: 20px;
+      color:$black;
+      font-weight: bold;
+    }
+  }
+}
 
 .pod-wrapper{
   padding: 20px;
@@ -1107,4 +1135,8 @@ nav{
       margin-bottom: -40px;
     }
   }
+}
+
+.blog-wrapper{
+  display: flex;
 }
