--- a/templates/blog/_entry.twig
+++ b/templates/blog/_entry.twig
@@ -1,27 +1,11 @@
 {% extends "_layout.twig" %}
 {% set currentEntry = entry %}
-
-{% if currentEntry.id != null %}
-    {% set firstEntry = craft.entries()
-        .section('blog')
-        .orderBy('postDate asc')
-        .one()
-    %}
-    
-    {% set previousEntries = craft.entries()
-        .section('blog')
-        .id('not ' ~ currentEntry.id)
-        .limit(3)
-        .orderBy('postDate desc')
-        .all()
-    %}
-    
-    {% if currentEntry.id != firstEntry.id %}
-        {% set entries = [firstEntry] | merge(previousEntries) %}
-    {% else %}
-        {% set entries = previousEntries %}
-    {% endif %}
-{% endif %}
+{% set entries = craft.entries()
+    .section('blog')
+    .id('not ' ~ currentEntry.id)
+    .limit(5)
+    .all()
+%}
 
 {% set featureImage = currentEntry.blogImage.one() %}
 {% set authorProfileImage = entry.authorProfile.one() %}
