--- a/templates/_partials/navigation.twig
+++ b/templates/_partials/navigation.twig
@@ -1,7 +1,7 @@
 
 {% set residential = craft.entries().section('residential').all() %}
 {% set commercial = craft.entries().section('commercial').all() %}
-
+{% set blog = craft.entries().section('blog').all() %}
 
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <a class="navbar-brand" href="{{ siteUrl }}"><img src="{{ contactDetails.companyLogo[0].getUrl() }}" alt="{{contactDetails.imageAltText}}"></a>
@@ -17,7 +17,7 @@
         <a class="nav-link" href="/residential">Residential</a>
       </li>
       <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        <a class="nav-link dropdown-toggle" href="/residential" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           Residential
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
@@ -32,7 +32,7 @@
       </li>
 
       <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        <a class="nav-link dropdown-toggle" href="/commercial" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           Commercial
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
@@ -40,11 +40,30 @@
             <a href="{{ post.url }}">{{ post.title }}</a>
         {% endfor %}
         </div>
-      </li>  
+      </li> 
        <li class="nav-item">
         <a class="nav-link" href="/about">About Us</a>
       </li>
+
+      <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" href="/blog" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          Blog
+        </a>
+        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+        {% for post in blog  %}
+            <a href="{{ post.url }}">{{ post.title }}</a>
+        {% endfor %}
+        </div>
+      </li> 
+              <li class="nav-item">
+        <a class="nav-link" href="/blog">blog</a>
+      </li>
+
     </ul>
+
+
+
+
     <div class="my-2 my-lg-0 btn dark">
               <a href="/contact">
             <svg class='btn-icon' width="37" height="24" viewBox="0 0 37 24" fill="none" xmlns="http://www.w3.org/2000/svg">
