--- a/templates/commercial/index.twig
+++ b/templates/commercial/index.twig
@@ -5,14 +5,12 @@
 {% block content %}
 
 
-<div class="commercial">
+<div class="services">
     <div class="container-fluid dark hero-header" >
       <div class="wrapper">
-          <div class="d-flex flex-column">
             <div class="">
                 <h1>Commercial electrical work</h1>
             </div>
-          </div>
       </div>
     </div>
 
