--- a/templates/residential/_entry.twig
+++ b/templates/residential/_entry.twig
@@ -1,17 +1,10 @@
 {% extends "_layout.twig" %}
-{% set featureImage = entry.heroImage.one() %}
-{# Residential content entries#}
 {% set entries = craft.entries().section('residential') %}
 
 {% block content %}
-{% for entry in entries %}
-    <div class="container-fluid style-3" >
-        <div class="wrapper">
-            {% include '_partials/res-comm/inner-nav-page.twig' %}
-        </div>
-    </div>
-{% endfor %}
-{% include '_partials/res-comm/alternating-blocks.twig' %}
-{% include "_partials/upsSection.twig" %}
-
+<div class="service-inner">
+    {% include '_partials/res-comm/inner-nav-page.twig' %}
+    {% include '_partials/res-comm/alternating-blocks.twig' %}
+    {% include "_partials/upsSection.twig" %}
+<div>
 {% endblock %}
