--- a/templates/residential/index.twig
+++ b/templates/residential/index.twig
@@ -6,7 +6,7 @@
 {% set posts = craft.entries().section('residential').all() %}
 {% block content %}
 
-<div class="residential">
+<div class="services">
    <div class="container-fluid dark hero-header" >
       <div class="wrapper">
          <div class="d-flex flex-column">
