--- a/templates/_partials/res-comm/inner-nav-page.twig
+++ b/templates/_partials/res-comm/inner-nav-page.twig
@@ -1,25 +1,43 @@
 {% set imgQuality = {
   quality: 60,
 } %}
-<div>
-{% if entry.title %}
-    <p class="pre-header">{{ entry.title }}</p>
-{% endif %}
-    {% if entry.heroTitle %}
-    <h1>{{ entry.heroTitle }}</h1>
-    {% endif %}   
-</div>
-<div class="svg-wrapper">
-    <div class="divider-detail"> 
-        {% include '_partials/svg/lg-cap-grey.svg' %}
-    </div>
-    <div class="bg-img bg-grad-1 d-flex" style="background-image: url('{{ featureImage.getUrl(imgQuality) }}');">
-        <div class="right-size">
-            <p class="intro-text dark">
-            {% if entry.heroText %}
-                {{entry.heroText}}
-            {% endif %}  
-            </p>
+{% set featureImage = entry.heroImage.one() %}
+{% for entry in entries %}
+
+
+    <div class="container-fluid hero-header" >
+        <div class="wrapper">
+            <div class="">
+                {% if entry.title %}
+                    <p class="pre-header">{{ entry.title }}</p>
+                {% endif %}
+                {% if entry.heroTitle %}
+                    <h1>{{ entry.heroTitle }}</h1>
+                {% endif %}  
+            </div>
         </div>
     </div>
-</div>
+
+        <div class="style-3">
+            <div class="wrapper-svg">
+        <div class="bg-img bg-height" style="background-image: url('{{ featureImage.getUrl(imgQuality) }}');">
+            <div class="absolute-wrapper">
+            <div class="absolute-svg">
+            {% include '_partials/svg/lg-cap-grey.svg' %}
+            </div>
+            </div>
+            <div class="right-size dark">
+                <p class="intro-text ">
+                {% if entry.heroText %}
+                    {{entry.heroText}}
+                {% endif %}  
+                </p>
+            </div>
+        </div>
+        </div>
+    </div>
+
+
+
+
+{% endfor %}
