--- a/web/assets/scss/style.scss
+++ b/web/assets/scss/style.scss
@@ -288,12 +288,14 @@ nav{
 .style-2, .style-4{
   @media (min-width:992px){
    .left-size{
-      min-width: 380px;
+    width: 100%;
+      max-width: 380px;
     }
   }
   @media (min-width:1200px){
     .left-size{
-      min-width: 480px;
+      width: 100%;
+      max-width: 480px;
     }
   }
 }
@@ -561,36 +563,10 @@ nav{
       }
     }
 
-    .test-author{
-      display: flex;
-      margin-top:30px;
-      @media (min-width:992px) {
-        margin-top:60px;
-      }
-      .img-auth{
-        margin-right:24px;
-        background-color: red;
-        width: 50px;
-        height: 50px;
-        border-radius: 100%;
-        overflow: hidden;
-        img{width: 100%;}
-
-      }
-      .text-auth{
-        p{
-          color:$medium-grey;
-        }
-        p span{
-          font-size: 20px;
-          color:$black;
-          font-weight: bold;
-        }
-      }
-    }
   }
 }
 //testimonial and blog
+.media-author,
 .test-author{
   display: flex;
   margin-top:30px;
@@ -608,16 +584,27 @@ nav{
 
   }
   .text-auth{
-    p{
-      color:$medium-grey;
-    }
     p span{
       font-size: 20px;
-      color:$black;
       font-weight: bold;
     }
   }
+
 }
+.test-author{
+  p{
+    color:$medium-grey;
+  }
+  p span{
+    color:$black;
+  }
+}
+.media-author{
+  p{
+    color:$red;
+  }
+}
+
 
 //homepage, services pages
 .pod-wrapper{
@@ -992,27 +979,76 @@ nav{
 
 
 // ******blog internal pages
-.blog-content{
-  background-color: $black800;
-  @include bg-img(url("/uploads/siteImages/bg-btm-left.svg"), 0% 120%, contain);
-  .small-image-wrapper{
-    padding-bottom: 0;
-    .intro-text{
-      color:$white;
-      padding-left: 100px;
+.media-entries{
+  .media-content{
+    padding-bottom: 40px;
+    background-color: $black800;
+    @include bg-img(url("/uploads/siteImages/bg-btm-left.svg"), 0% 120%, contain);
+    .small-image-wrapper{
+      padding-bottom: 0;
+      .intro-text{
+        color:$white;
+        padding-top: 40px;
+      }
+      .bg-img{
+        min-height: 400px;
+        max-width: 480px;
+      }
+
+      @media (min-width:992px){
+        .media-content{
+          padding-bottom: 0;
+        }
+        .intro-text{
+        padding-left: 100px;
+        padding-top: 0;
+        }
+        .bg-img{
+          margin-bottom: -40px;
+        }
+      }
     }
-    .bg-img{
-     min-height: 400px;
-      max-width: 460px;
-      margin-bottom: -40px;
+  }
+  .style-4{
+    padding-bottom: 0;
+  }
+
+  .media-wrapper{
+    .d-flex{
+      flex-direction: column-reverse;
+      @media(min-width:992px){
+        flex-direction: row;
+      }
+    }
+  }
+  .media-nav{
+    ul {
+      list-style: none;
+      padding-left: 0;
+      li{
+        padding-bottom: 36px;
+        border-bottom:1px solid  #D1D5DB;
+        margin-bottom: 36px;
+        a{
+          font-size:30px;
+          font-weight:500;
+        }
+      }
+    }
+  }
+
+
+  .media-body{
+    p{
+      margin-bottom: 50px;
+    }
+    @media(min-width:992px){
+      &.right-size{
+        padding-left: 100px;
+      }
     }
   }
 }
-
-.blog-wrapper{
-  display: flex;
-}
-
 
 //footer - all pages
 .footer{
