working through site

--- a/templates/about/_entry.twig
+++ b/templates/about/_entry.twig
@@ -31,7 +31,7 @@
     <div class="wrapper">
         <div class="d-lg-flex small-image">
         <div class="left-size">
-            <div class="bg-img" style="background-image: url('{{ asset2.getUrl(imgQuality) }}">
+            <div class="bg-img" style="background-image: url('{{ asset2.getUrl(imgQuality) }}')">
             </div>
         </div>
         <div class="right-size">
