--- a/templates/_partials/navigation.twig
+++ b/templates/_partials/navigation.twig
@@ -56,9 +56,11 @@
         </div>
       </li> 
               <li class="nav-item">
-        <a class="nav-link" href="/blog">blog</a>
+        <a class="nav-link" href="/blog">Blog</a>
       </li>
-
+              <li class="nav-item">
+        <a class="nav-link" href="/careers">Careers</a>
+      </li>
     </ul>
 
 
