--- a/web/assets/scss/style.scss
+++ b/web/assets/scss/style.scss
@@ -288,14 +288,21 @@ nav{
 .style-2, .style-4{
   @media (min-width:992px){
    .left-size{
-    width: 100%;
-      max-width: 380px;
+    width: 380px;
+    min-width: 380px;
+    img{
+      max-width: 360px;
+    }
+      
     }
   }
   @media (min-width:1200px){
     .left-size{
-      width: 100%;
-      max-width: 480px;
+      min-width: 480px;
+      width: 480px;
+      img{
+        max-width: 480px;
+      }
     }
   }
 }
@@ -763,20 +770,37 @@ nav{
   }
 }
 //about us and blog pages (style 4)
-.small-image-wrapper{
-  padding-bottom: 60px;
+
+
+
+//residential, commercial (and entries) - About page.
+// image and svg section outside of wrapper
+.wrapper-svg{
+  position:relative;
+  .residential-svg{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    left: 0;
+    svg{
+      width: 100%;
+      height: 100%;
+    }
+  }
+  .bg-img.bg-height {
+    width: calc(100% - 80px);
+    margin: 0 auto;
+    max-width: 1440px;
+  }
+
   @media (min-width:992px){
-    padding-bottom: 120px;
-    .bg-img{
-      min-height:300px;
-      max-height: 300px;
-      max-width: 300px;
+    padding-left: 80px;
+    padding-right:80px;
+    .bg-img.bg-height {
+      width: 100%;
     }
   }
 }
-
-
-
 
 
 
@@ -840,34 +864,7 @@ nav{
   }
 }
 
-//residential, commercial (and entries) - About page.
-// image and svg section outside of wrapper
-.wrapper-svg{
-  position:relative;
-  .residential-svg{
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    left: 0;
-    svg{
-      width: 100%;
-      height: 100%;
-    }
-  }
-  .bg-img.bg-height {
-    width: calc(100% - 80px);
-    margin: 0 auto;
-    max-width: 1440px;
-  }
 
-  @media (min-width:992px){
-    padding-left: 80px;
-    padding-right:80px;
-    .bg-img.bg-height {
-      width: 100%;
-    }
-  }
-}
 
 .service-inner{
   .wrapper-svg{
@@ -930,11 +927,21 @@ nav{
 
 // ******about
 .about{
-.small-image-wrapper{
-  .intro-text{
-    color:$grey700;
+  .small-image-wrapper{
+    .intro-text{
+      color:$grey700;
+    }
+    padding-bottom: 60px;
+    @media (min-width:992px){
+      padding-bottom: 120px;
+      .bg-img{
+        min-height:300px;
+        max-height: 300px;
+        max-width: 300px;
+      }
+    }
   }
-}
+
   .style-5.sec-1{
     padding: 0px 20px 0;
   }
@@ -978,77 +985,142 @@ nav{
 
 
 
-// ******blog internal pages
+// ******blog internal pages and careers
 .media-entries{
   .media-content{
-    padding-bottom: 40px;
     background-color: $black800;
     @include bg-img(url("/uploads/siteImages/bg-btm-left.svg"), 0% 120%, contain);
+    position: relative;
     .small-image-wrapper{
       padding-bottom: 0;
       .intro-text{
         color:$white;
         padding-top: 40px;
+        padding-bottom:40px;
       }
-      .bg-img{
-        min-height: 400px;
-        max-width: 480px;
-      }
-
-      @media (min-width:992px){
-        .media-content{
-          padding-bottom: 0;
+      .left-size {
+      z-index: 3;
+      position: relative;
+        img{
+          max-width: 300px;
+  
         }
+      }
+      .social-links{
+        height: 100px;
+        align-items: flex-end;
+        display: flex;
+        padding: 20px 0;
+        z-index: 2;
+        position: relative;
+        a{margin-right: 20px;}
+      }
+  
+      @media (min-width:992px){
         .intro-text{
         padding-left: 100px;
         padding-top: 0;
+        padding-bottom: 60px;
         }
-        .bg-img{
-          margin-bottom: -40px;
+        .left-size img{
+          max-width: 360px;
+        }
+        .right-size{
+          display: flex;
+          flex-direction: column;
+          justify-content: space-between;
+        }
+        .social-links{
+          padding-left: 100px;
         }
       }
-    }
-  }
-  .style-4{
-    padding-bottom: 0;
-  }
-
-  .media-wrapper{
-    .d-flex{
-      flex-direction: column-reverse;
-      @media(min-width:992px){
-        flex-direction: row;
-      }
-    }
-  }
-  .media-nav{
-    ul {
-      list-style: none;
-      padding-left: 0;
-      li{
-        padding-bottom: 36px;
-        border-bottom:1px solid  #D1D5DB;
-        margin-bottom: 36px;
-        a{
-          font-size:30px;
-          font-weight:500;
+      @media (min-width:1200px){
+        .left-size img{
+          max-width: 480px;
         }
       }
     }
-  }
+    .body-content{
+      padding-top:40px;
+      .media-wrapper{
+        .d-flex{
+          flex-direction: column-reverse;
+        }
+        @media(min-width:992px){
+          .d-flex{
+          flex-direction: row;
+          }
+        }
 
+        @media(min-width:1200px){
+          padding-top:70px;
+        }
 
-  .media-body{
-    p{
-      margin-bottom: 50px;
+      }
+      .media-nav{
+        ul {
+          margin-top: 40px;
+          list-style: none;
+          padding-left: 0;
+          li{
+            padding-bottom: 36px;
+            border-bottom:1px solid  #D1D5DB;
+            margin-bottom: 36px;
+            a{
+              font-size:30px;
+              font-weight:500;
+            }
+            p{
+              margin-top: 10px;
+            }
+          }
+        }
+      }
+      .media-body{
+        p{
+          margin-bottom: 50px;
+        }
+        @media(min-width:992px){
+          &.right-size{
+            padding-left: 100px;
+          }
+        }
+      }
     }
-    @media(min-width:992px){
-      &.right-size{
-        padding-left: 100px;
+
+}
+
+.media-entries.blog-entries{
+  .media-content{
+    &::after{
+      content:'';
+      width: 100%;
+      height: 100px;
+      background-color:$white;
+      left:0;
+      bottom: -1px ;
+      position: absolute;
+      z-index: 1;
+    }
+  }
+  }
+}
+
+
+.media-entries.careers{
+  .small-image-wrapper{
+    @media (min-width:992px){
+      .bg-img{
+        height: 100%;
+        max-width: 480px;
       }
     }
   }
 }
+
+
+
+
 
 //footer - all pages
 .footer{
