--- a/templates/_layout.twig
+++ b/templates/_layout.twig
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="https://use.typekit.net/cic1emf.css">
   </head>
   <header>
-  {% include "_partials/navigation.twig" %}
+  {# {% include "_partials/navigation.twig" %} #}
   </header>
 
 
