--- a/templates/blog/_entry.twig
+++ b/templates/blog/_entry.twig
@@ -12,6 +12,7 @@
 
 {% block content %}
 
+<div class="media-entries blog-entries">
    <div class="media-content dark">
       <div class="container-fluid hero-header" >
          <div class="wrapper">
@@ -42,9 +43,9 @@
          </div>
       </div>
 
-      {# <div class="single-svg">
+      <div class="single-svg">
          {% include '_partials/svg/lg-round-grey.svg' %}
-      </div> #}
+      </div>
 
       <div class="container-fluid style-4 small-image-wrapper" >
          <div class="wrapper">
@@ -70,8 +71,8 @@
       </div>
    </div>
 
-   {# <div class="container-fluid style-4 body-content" >
-      <div class="wrapper media-wrapper">
+   <div class="container-fluid style-4 body-content" >
+      <div class="wrapper">
          <div class="d-flex">
             <div class="media-nav left-size">
                <p class="pre-header">Read Next</p>
@@ -95,7 +96,7 @@
          
          </div>
       </div>
-   </div> #}
+   </div>
 
 
 {% endblock %}
