--- a/templates/careers/index.twig
+++ b/templates/careers/index.twig
@@ -10,7 +10,8 @@
          <div class="wrapper">
             <div class="d-flex flex-column">
                <div class="">
-                  <h1 class="">Work with us</h1>
+               <p class="pre-header">Careers</p>
+                  <h1 class="">Work For Us</h1>
                </div>
             </div>
          </div>
@@ -19,6 +20,7 @@
       <div class="single-svg">
          {% include '_partials/svg/lg-round-grey.svg' %}
       </div>
+
       <div class="container-fluid style-4 small-image-wrapper" >
          <div class="wrapper">
             <div class="d-lg-flex">
@@ -39,12 +41,13 @@
    </div>
 
 
-   {# <div class="container-fluid style-4 body-content" >
-      <div class="wrapper media-wrapper">
+   <div class="container-fluid style-4 body-content" >
+      <div class="wrapper">
             {% for post in posts %}
       <div>
          <div class="d-flex">
             <div class="media-nav left-size">
+            <h3>Position</h3>
                {% if post.title %}
                   <p class="pre-header">{{post.title}}</p>
                {% endif %}
@@ -74,7 +77,7 @@
 
       {% endfor %}
       </div>
-   </div> #}
+   </div>
 </div>
 
 
