--- a/templates/about/_entry.twig
+++ b/templates/about/_entry.twig
@@ -11,6 +11,14 @@
 {% set asset2 = entry.imageTwo.one() %}
 
 
+{# testimonials #}
+{% set myEntryQuery = craft.entries()
+  .section('staff')
+  .limit(10) %}
+
+{# Fetch testimonials entries #}
+{% set entries = myEntryQuery.all() %}
+
 {% block content %}
 <div class="about">
   <div class="container-fluid hero-header" >
@@ -78,6 +86,58 @@
     </div>
   </div>
 
+
+
+
+  <div class="services">
+    <div class="container-fluid dark style-2" >
+        <div class="wrapper">
+        <div class="d-lg-flex ">
+            <div class="left-size">
+            </div>
+            <div class="right-size">
+              <h3>Meet The Team</h3>
+            </div>
+          </div>
+          <div class="d-lg-flex ">
+            <div class="left-size">
+              <p class="intro-text">
+              Get Amped Electrical is an owner-operated business based on the beautiful Kāpiti Coast.
+              </p>
+            </div>
+            <div class="right-size">
+              {# <h3>Electrical work that keeps your business running</h3> #}
+              <p>Owner-electricians Mick and Emily Renwick live locally and love the lifestyle the area has to offer, from the beautiful beaches to the friendly, vibrant community. Mick Renwick has over twenty years’ experience in the electrical trade and brings a wealth of electrical, product and technology knowledge to the table. Emily splits her time between electrical work and managing the business side of Get Amped Electrical.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    <div>
+    <div class=" style-7 pod-wrapper">
+    <div>
+      <div>
+        <div class="d-flex  flex-wrap  pods pod-3">
+         {% for entry in entries %}
+            <div class="d-flex flex-column justify-content-left pod">
+            <div class="img-auth">
+            {% if entry.staffImage %}  
+              <img src="{{ entry.staffImage[0].getUrl('customerProfilePic') }}" alt="Customer profile image">
+          {% endif %}
+            </div>
+
+            {% if entry.title %}
+              <h4>{{entry.title }}</h4>
+          {% endif %}
+            {% if entry.staffPosition %}
+              <p class="pre-header">{{entry.staffPosition }}</p>
+            {%  endif %}
+            </div>
+          {% endfor %}
+        </div>
+      </div>
+    </div>
+  </div>
+  </div>
 </div>
 
 
