--- a/web/assets/scss/style.scss
+++ b/web/assets/scss/style.scss
@@ -722,7 +722,13 @@ nav{
       }
     }
   }
-
+  &.pod-3{
+    @media (min-width:992px){
+      .pod{
+        width: 33.333%;
+      }
+    }
+  }
 }
 
 //contact section - contact page and contact box homepage
@@ -790,7 +796,7 @@ nav{
   .bg-img.bg-height {
     width: calc(100% - 80px);
     margin: 0 auto;
-    max-width: 1440px;
+    max-width: 1420px;
   }
 
   @media (min-width:992px){
@@ -942,17 +948,55 @@ nav{
     }
   }
 
-  .style-5.sec-1{
-    padding: 0px 20px 0;
-  }
+
+
   .style-5{
-    padding: 0px 20px 0;
     margin-bottom: 40px;
     .half{
       margin: 0;
     }
     @media (min-width:992px){
       margin-bottom: 100px;
+    }
+  }
+
+
+  .style-5.sec-1{
+    padding: 0px 20px 0;
+    @media (min-width:768px){
+      padding: 0px 40px 0;
+    }
+    @media (min-width:992px){
+      padding: 0px 20px 0;
+    }
+  }
+
+
+  .services{
+    .intro-text{
+      padding-left: 0;
+      color:$white;
+      font-size:32px;
+      margin-bottom: 20px;
+    }
+    h3{
+      margin-bottom: 40px;
+    }
+    .right-size p{
+      font-size: 24px;
+      color:#909CA2;
+    }
+    @media (min-width:992px){
+      .intro-text{
+        margin-bottom: 0px;
+      }
+      .right-size p,
+      h3{
+        margin-left: 100px;
+      }
+      h3{
+        margin-bottom: 80px;
+      }
     }
   }
 }
